--- a/src.asp/DZzzz.Learning.Core.App.Configuration/appsettings.json
+++ b/src.asp/DZzzz.Learning.Core.App.Configuration/appsettings.json
@@ -7,5 +7,13 @@
     "Option1": true,
     "Option2": 1,
     "Option3": "string"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
   }
 }
