--- a/src.asp/DZzzz.Learning.Core.App.Configuration/DZzzz.Learning.Core.App.Configuration.csproj
+++ b/src.asp/DZzzz.Learning.Core.App.Configuration/DZzzz.Learning.Core.App.Configuration.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Home\Index.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
